--- a/chess.html
+++ b/chess.html
@@ -157,7 +157,7 @@ Chess    </title>
 <script src="/js/chessboard.js"></script>
 <script src="/js/chess.js"></script>
 <p><span id="status"></span></p>
-<div id="board" style="width: 100%"></div>
+<div id="board" style="width: 100%;"></div>
 <br/>
 <div style="text-align:center;">
 <input class="button" id="startBtn" type="button" value="&lt;&lt;"/>
@@ -177,7 +177,7 @@ Chess    </title>
 <br/>
 <textarea id="field" style="width: 100%; height: 400px;"></textarea>
 <hr/>
-        See also:<br/>
+        See Also:<br/>
 <a href="/dark-chess.html" id="generated-link-id0">Dark-Chess Variant</a><br/>
 <a href="https://www.apronus.com/chess/pgnviewer/" id="generated-link-id1">Apronus chess viewer</a><br/>
 <a href="http://chessboardjs.com/" id="generated-link-id2">chessboard.js</a><br/>
