--- a/links.html
+++ b/links.html
@@ -177,6 +177,25 @@ Links    </title>
                 -
             </td>
             <td>
+                ai.google
+            </td>
+            <td>
+                <a href="https://ai.google/research/pubs/pub44806">research/pubs/pub44806</a>
+            </td>
+            <td>
+                <a href="reading-list.html">
+                    Favorite Readings
+                </a>
+            </td>
+            <td>
+                 <a href="reading-list.html#generated-link-id50">Mastering the game of Go with deep neural networks and tree search</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                -
+            </td>
+            <td>
                 aibrt.org
             </td>
             <td>
@@ -245,7 +264,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id43">Decoherence, einselection, and the quantum origins of the classical</a>
+                 <a href="reading-list.html#generated-link-id48">Decoherence, einselection, and the quantum origins of the classical</a>
             </td>
         </tr>
         <tr>
@@ -264,7 +283,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id44">The Mathematical Universe</a>
+                 <a href="reading-list.html#generated-link-id49">The Mathematical Universe</a>
             </td>
         </tr>
         <tr>
@@ -378,7 +397,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                Dark Chess (Wikipedia) <a href="dark-chess.html#generated-link-id1">chessboard.js</a>
+                Dark Chess (Wikipedia) <a href="dark-chess.html#generated-link-id2">chessboard.js</a>
             </td>
         </tr>
         <tr>
@@ -416,7 +435,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id42">Reflections on Trusting Trust</a>
+                 <a href="reading-list.html#generated-link-id46">Reflections on Trusting Trust</a>
             </td>
         </tr>
         <tr>
@@ -549,7 +568,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id18">Science Isn’t Broken</a>
+                 <a href="reading-list.html#generated-link-id22">Science Isn’t Broken</a>
             </td>
         </tr>
         <tr>
@@ -701,7 +720,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                js <a href="dark-chess.html#generated-link-id2">chess.js</a>
+                js <a href="dark-chess.html#generated-link-id3">chess.js</a>
             </td>
         </tr>
         <tr>
@@ -721,6 +740,25 @@ Links    </title>
             </td>
             <td>
                 He has his own prescient understanding «» of Facebook (and a large number of other companies in this space), fears for the future « <a href="facebook.html#generated-link-id251">gnu.org</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                www
+            </td>
+            <td>
+                gnu.org
+            </td>
+            <td>
+                <a href="https://www.gnu.org/philosophy/right-to-read.html">philosophy/right-to-read.html</a>
+            </td>
+            <td>
+                <a href="reading-list.html">
+                    Favorite Readings
+                </a>
+            </td>
+            <td>
+                 <a href="reading-list.html#generated-link-id19">The Right to Read</a>
             </td>
         </tr>
         <tr>
@@ -853,7 +891,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id12">Stop Trying to be Happy</a>
+                 <a href="reading-list.html#generated-link-id13">Stop Trying to be Happy</a>
             </td>
         </tr>
         <tr>
@@ -872,7 +910,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id13">Fuck Yes or No</a>
+                 <a href="reading-list.html#generated-link-id14">Fuck Yes or No</a>
             </td>
         </tr>
         <tr>
@@ -891,7 +929,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id14">How Disney Ruined Sex for Everyone</a>
+                 <a href="reading-list.html#generated-link-id15">How Disney Ruined Sex for Everyone</a>
             </td>
         </tr>
         <tr>
@@ -910,7 +948,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id16">7 Strange Questions That Help You Find Your Life Purpose</a>
+                 <a href="reading-list.html#generated-link-id17">7 Strange Questions That Help You Find Your Life Purpose</a>
             </td>
         </tr>
         <tr>
@@ -1043,7 +1081,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id19">The Wisdom/Madness of Crowds</a>
+                 <a href="reading-list.html#generated-link-id23">The Wisdom/Madness of Crowds</a>
             </td>
         </tr>
         <tr>
@@ -1062,7 +1100,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id20">Parable of the Polygons</a>
+                 <a href="reading-list.html#generated-link-id24">Parable of the Polygons</a>
             </td>
         </tr>
         <tr>
@@ -1081,7 +1119,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id21">The Evolution of Trust</a>
+                 <a href="reading-list.html#generated-link-id25">The Evolution of Trust</a>
             </td>
         </tr>
         <tr>
@@ -1176,7 +1214,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id9">What You Can’t Say</a>
+                 <a href="reading-list.html#generated-link-id10">What You Can’t Say</a>
             </td>
         </tr>
         <tr>
@@ -1195,7 +1233,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id10">What You’ll Wish You’d Known</a>
+                 <a href="reading-list.html#generated-link-id11">What You’ll Wish You’d Known</a>
             </td>
         </tr>
         <tr>
@@ -1214,7 +1252,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id11">Lies We Tell Kids</a>
+                 <a href="reading-list.html#generated-link-id12">Lies We Tell Kids</a>
             </td>
         </tr>
         <tr>
@@ -1485,6 +1523,25 @@ Links    </title>
         </tr>
         <tr>
             <td>
+                www
+            </td>
+            <td>
+                teamten.com
+            </td>
+            <td>
+                <a href="https://www.teamten.com/lawrence/writings/coding-machines/">lawrence/writings/coding-machines</a>
+            </td>
+            <td>
+                <a href="reading-list.html">
+                    Favorite Readings
+                </a>
+            </td>
+            <td>
+                 <a href="reading-list.html#generated-link-id20">Coding Machines</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 playground
             </td>
             <td>
@@ -1499,7 +1556,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id22">Tensor Flow Playground</a>
+                 <a href="reading-list.html#generated-link-id26">Tensor Flow Playground</a>
             </td>
         </tr>
         <tr>
@@ -1694,6 +1751,25 @@ Links    </title>
         </tr>
         <tr>
             <td>
+                www.cse
+            </td>
+            <td>
+                unr.edu
+            </td>
+            <td>
+                <a href="https://www.cse.unr.edu/~sushil/class/gas/papers/DannyHillisCoevolution.pdf">~sushil/class/gas/papers/DannyHillisCoevolution.pdf</a>
+            </td>
+            <td>
+                <a href="reading-list.html">
+                    Favorite Readings
+                </a>
+            </td>
+            <td>
+                 <a href="reading-list.html#generated-link-id47">Co-Evolving Parasites Improve Simulated Evolution as an Optimization Procedure</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 www-bcf
             </td>
             <td>
@@ -1708,7 +1784,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id41">The Market for Lemons</a>
+                 <a href="reading-list.html#generated-link-id45">The Market for Lemons</a>
             </td>
         </tr>
         <tr>
@@ -1746,7 +1822,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id15">This World of Ours</a>
+                 <a href="reading-list.html#generated-link-id16">This World of Ours</a>
             </td>
         </tr>
         <tr>
@@ -2468,7 +2544,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="dark-chess.html#generated-link-id0">Dark Chess (Wikipedia)</a>
+                Normal Chess <a href="dark-chess.html#generated-link-id1">Dark Chess (Wikipedia)</a>
             </td>
         </tr>
         <tr>
@@ -2487,7 +2563,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id25">Brave New World</a>
+                 <a href="reading-list.html#generated-link-id29">Brave New World</a>
             </td>
         </tr>
         <tr>
@@ -2506,7 +2582,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id26">Nineteen Eighty-Four</a>
+                 <a href="reading-list.html#generated-link-id30">Nineteen Eighty-Four</a>
             </td>
         </tr>
         <tr>
@@ -2525,7 +2601,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id27">Catch-22</a>
+                 <a href="reading-list.html#generated-link-id31">Catch-22</a>
             </td>
         </tr>
         <tr>
@@ -2544,7 +2620,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id28">Dune</a>
+                 <a href="reading-list.html#generated-link-id32">Dune</a>
             </td>
         </tr>
         <tr>
@@ -2563,7 +2639,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id29">A Fire Upon the Deep</a>
+                 <a href="reading-list.html#generated-link-id33">A Fire Upon the Deep</a>
             </td>
         </tr>
         <tr>
@@ -2582,7 +2658,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id31">The Communist Manifesto</a>
+                 <a href="reading-list.html#generated-link-id35">The Communist Manifesto</a>
             </td>
         </tr>
         <tr>
@@ -2601,7 +2677,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id32">On the Genealogy of Morality</a>
+                 <a href="reading-list.html#generated-link-id36">On the Genealogy of Morality</a>
             </td>
         </tr>
         <tr>
@@ -2620,7 +2696,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id33">Gödel, Escher, Bach</a>
+                 <a href="reading-list.html#generated-link-id37">Gödel, Escher, Bach</a>
             </td>
         </tr>
         <tr>
@@ -2639,7 +2715,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id34">Surely You’re Joking, Mr. Feynman</a>
+                 <a href="reading-list.html#generated-link-id38">Surely You’re Joking, Mr. Feynman</a>
             </td>
         </tr>
         <tr>
@@ -2658,7 +2734,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id35">Lies My Teacher Told Me</a>
+                 <a href="reading-list.html#generated-link-id39">Lies My Teacher Told Me</a>
             </td>
         </tr>
         <tr>
@@ -2677,7 +2753,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id36">Guns, Germs, and Steel</a>
+                 <a href="reading-list.html#generated-link-id40">Guns, Germs, and Steel</a>
             </td>
         </tr>
         <tr>
@@ -2696,7 +2772,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id37">The Big Short</a>
+                 <a href="reading-list.html#generated-link-id41">The Big Short</a>
             </td>
         </tr>
         <tr>
@@ -2715,7 +2791,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id38">Debt: The First 5000 Years</a>
+                 <a href="reading-list.html#generated-link-id42">Debt: The First 5000 Years</a>
             </td>
         </tr>
         <tr>
@@ -2734,7 +2810,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                 <a href="reading-list.html#generated-link-id39">Quantum Computing Since Democritus</a>
+                 <a href="reading-list.html#generated-link-id43">Quantum Computing Since Democritus</a>
             </td>
         </tr>
         <tr>
