mostly chess fixs; markdown demo

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,13 @@ Contact Info    </title>
     <link rel="stylesheet" type="text/css" id="dark-default-theme-css"
           class="color-css" href="theme/css/color-dark-default.css">
 
+    <!--
+    The google fonts API nominally minimizes data collection
+    https://developers.google.com/fonts/faq
+    #what_does_using_the_google_fonts_api_mean_for_the_privacy_of_my_users
+    -->
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Raleway:600i|Roboto">
 
     <!-- JS for Color Theming -->
     <script type="text/javascript">
@@ -158,6 +165,9 @@ Contact Info    </title>
 <p>Optional PGP Key: <a href="https://pgp.mit.edu/pks/lookup?op=vindex&amp;search=0x3C987EE03CA9982A" id="generated-link-id2">pgp.mit.edu</a></p>
 </article>
     </main>
+
+
+
 
   </body>
 
