--- a/facebook.html
+++ b/facebook.html
@@ -25,6 +25,13 @@ It's So Much Bigger Than Facebook    </title>
     <link rel="stylesheet" type="text/css" id="dark-default-theme-css"
           class="color-css" href="theme/css/color-dark-default.css">
 
+    <!--
+    The google fonts API nominally minimizes data collection
+    https://developers.google.com/fonts/faq
+    #what_does_using_the_google_fonts_api_mean_for_the_privacy_of_my_users
+    -->
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Raleway:600i|Roboto">
 
     <!-- JS for Color Theming -->
     <script type="text/javascript">
@@ -1258,6 +1265,7 @@ the screen of a tablet or smartphone in a distinct manner”. <a class="footnot
 </div>
 </article>
     </main>
+
 
 
 
