--- a/links.html
+++ b/links.html
@@ -25,6 +25,13 @@ Links    </title>
     <link rel="stylesheet" type="text/css" id="dark-default-theme-css"
           class="color-css" href="theme/css/color-dark-default.css">
 
+    <!--
+    The google fonts API nominally minimizes data collection
+    https://developers.google.com/fonts/faq
+    #what_does_using_the_google_fonts_api_mean_for_the_privacy_of_my_users
+    -->
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Raleway:600i|Roboto">
 
     <!-- JS for Color Theming -->
     <script type="text/javascript">
@@ -2488,25 +2495,6 @@ Links    </title>
             </td>
             <td>
                 Hanlon’s Razor « <a href="facebook.html#generated-link-id321">wikipedia.org</a>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                en
-            </td>
-            <td>
-                wikipedia.org
-            </td>
-            <td>
-                <a href="https://en.wikipedia.org/wiki/Markdown">wiki/Markdown</a>
-            </td>
-            <td>
-                <a href="about.html">
-                    About
-                </a>
-            </td>
-            <td>
-                I’m using pelican to render this site from <a href="about.html#generated-link-id9">markdown</a>
             </td>
         </tr>
         <tr>
