--- a/reading-list.html
+++ b/reading-list.html
@@ -25,6 +25,13 @@ Favorite Readings    </title>
     <link rel="stylesheet" type="text/css" id="dark-default-theme-css"
           class="color-css" href="theme/css/color-dark-default.css">
 
+    <!--
+    The google fonts API nominally minimizes data collection
+    https://developers.google.com/fonts/faq
+    #what_does_using_the_google_fonts_api_mean_for_the_privacy_of_my_users
+    -->
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Raleway:600i|Roboto">
 
     <!-- JS for Color Theming -->
     <script type="text/javascript">
@@ -411,6 +418,9 @@ Favorite Readings    </title>
 </table>
 </article>
     </main>
+
+
+
 
   </body>
 
