--- a/dark-chess.html
+++ b/dark-chess.html
@@ -213,7 +213,7 @@ Dark-Chess    </title>
      hist,                                   // history of moves
      move_num,                               // current move number
      statusEl = $('#status'),                // status field
-     fieldEl = $('#field'),                  // text box console.log(params)
+     fieldEl = $('#field'),                  // text box
      params = parse_url();
  var game = new Chess(undefined, !params.l); // Chess
 
@@ -323,7 +323,6 @@ Dark-Chess    </title>
          }
 
          if (capturedsq) {
-             console.log(capturedsq);
              visible.add(capturedsq);
              visible.add(emptysq);
          }
@@ -518,7 +517,6 @@ Dark-Chess    </title>
 
      var current_fen = game.fen();
      var is_valid = game.move(m);
-     console.log(is_valid, params.l);
 
      if (is_valid) {
 
