--- a/dark-chess.html
+++ b/dark-chess.html
@@ -216,6 +216,18 @@ Dark-Chess    </title>
      fieldEl = $('#field'),                  // text box
      params = parse_url();
  var game = new Chess(undefined, !params.l); // Chess
+ game.load_pgn(params.p);
+
+ hist = game.history();
+ move_num = hist.length;
+
+
+
+ // for review (showing fog for both players)
+ // `update()` will not allow players to fish for information with prospective
+ // moves
+ var max_move_num = move_num;
+ var max_visible = vision(game, params.w);
 
  // given row and column numbers (starting at 0), convert to
  // square name. e.g. 0,0 -> a8
@@ -453,7 +465,7 @@ Dark-Chess    </title>
      if (move_num == 0) {
          return window.location.hostname + window.location.pathname;
      }
-     else if (!is_over()) {
+     else if (move_num != (max_move_num + 1) && !is_over()) {
          update();
          return "You must first make a move."
      }
@@ -474,11 +486,6 @@ Dark-Chess    </title>
      return window.location.hostname + window.location.pathname + '?' + payload;
  }
 
- game.load_pgn(params.p);
-
- hist = game.history();
- move_num = hist.length;
-
  // game options
  document.getElementById('scouting').checked = params.s;
  document.getElementById('overrun').checked = params.o;
@@ -496,12 +503,6 @@ Dark-Chess    </title>
          document.getElementById('warn').checked = true;
      }
  };
-
- // for review (showing fog for both players)
- // `update()` will not allow players to fish for information with prospective
- // moves
- var max_move_num = move_num;
- var max_visible = vision(game, params.w);
 
  // dark-chess allows checked positions to play unrestricted
  // and capture of kings, but check-mate is check-mate
