--- a/dark-chess.html
+++ b/dark-chess.html
@@ -467,7 +467,7 @@ Dark-Chess    </title>
          return "Request originated from invalid URL String."
      }
      if (move_num == 0) {
-         return window.location.hostname + 'dark-chess';
+         return window.location.hostname + '/dark-chess';
      }
      else if (move_num != (max_move_num + 1) && !is_over()) {
          update();
@@ -489,7 +489,7 @@ Dark-Chess    </title>
                   .replace(/\s*[0-9]+\.\s+|\s+/g, ' ')
                   .substr(1)
      }));
-     return window.location.hostname + window.location.pathname + '?' + payload;
+     return window.location.hostname + '/dark-chess?' + payload;
  }
 
  // game options
